# hattrick_data_model

./: LICENSE  README.md  pyproject.toml
src/hattrick_data_model/: age.py  field_position.py  formation.py  level.py  match_composition.py  player_type.py  skill_type.py  special_skill.py  youth_player.py
