[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hattrick_data_model"
version = "0.1.0"
authors = ["nby"]
description = "Data model for Hattrick"
reamde = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License"
]

[project.urls]
Homepage = "https://github.com/mastertnt/hattrick_data_model"
Issues = "https://github.com/mastertnt/hattrick_data_model/issues"